<FIX> Mar-10 Fix .yml file

--- a/.github/workflows/project_checker.yml
+++ b/.github/workflows/project_checker.yml
@@ -25,5 +25,4 @@ jobs:
     - name: Run build
       run: make custom_string.a
     - name: Run tests
-      run: make clean
-      run: make
+      run: make clean && make
