--- a/.github/workflows/project_checker.yml
+++ b/.github/workflows/project_checker.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install build essentials and clang-format
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential clang-format cppcheck lcov
+        sudo apt-get install -y build-essential clang-format cppcheck lcov check
 
     - name: Run lint
       run: clang-format -i --style=Google **/*.c **/*.h
