--- a/.github/workflows/project_checker.yml
+++ b/.github/workflows/project_checker.yml
@@ -19,7 +19,7 @@ jobs:
         sudo apt-get install -y build-essential clang-format cppcheck lcov check
 
     - name: Run lint
-      run: clang-format -i --style=Google **/*.c **/*.h
+      run: clang-format -n --style=Google **/*.c **/*.h
     - name: Run cppcheck
       run: cppcheck --language=c **/*.c **/*.h
     - name: Run build
